--- a/bio.html
+++ b/bio.html
@@ -4,12 +4,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bio</title>
+    <title>Biography</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rosarivo:ital@0;1&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <!-- <link rel="stylesheet" href="styles.css"> -->
     <link rel="stylesheet" href="bio-styles.css">
   </head>
   
@@ -24,25 +24,39 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-link" href="index.html">Home</a>  
-            <a class="nav-link active" aria-current="page" href="#">Bio</a> 
+            <a class="nav-link active" aria-current="page" href="#">Biography</a> 
             <a class="nav-link" href="work.html">Work</a> 
             <a class="nav-link" href="places.html">Places</a> 
-            <a class="nav-link" href="blog.html">Blog</a> 
             <a class="nav-link" href="library.html">Library</a> 
+            <a class="nav-link" href="blog.html">Blog</a> 
           </div>
         </div>
       </div>
     </nav>
     <div class="nav-buffer"></div>
     <br>
-  
+
     <div class="main-container">
-      <div class="container-fluid">
-  
-        <article class="banner-text">Or watch the things you gave your life to, broken,<br>
-          And stoop and build ’em up with worn-out tools.</article>
       
+      <div class="container-fluid">
+        <blockquote class="banner-text">"If you can meet with Triumph and Disaster <br>
+          And treat those two impostors just the same."</blockquote>
       </div>
+
+      <div class="container-bio">
+        <div class="row">
+          <div class="col-5 text" id="bio-text">
+            <h2>Biography</h2>
+            <p>I'm an explorer, learner, and builder.</p>
+            <p>I grew up in West Texas, spent 8 years living and working in China, another 8 years in Washington, DC, and recently moved back home to Texas.  Many ups and downs along the way.</p>
+            <p>I now live outside Austin, TX with my wife and son (coming soon).</p>
+          </div>
+          <div class="col-7 image" id="bio-image">
+            <img src="img/profile-pic-silhouette.png" height="300px" alt="profile-pic">
+          </div>
+        </div>
+      </div>
+
     </div>
   
     <footer class="container-fluid">
