--- a/bio.html
+++ b/bio.html
@@ -47,7 +47,7 @@
         <div class="row">
           <div class="col-5 text" id="bio-text">
             <h2>Biography</h2>
-            <p>I'm an explorer, learner, and builder.</p>
+            <p>Explorer, learner, and builder.</p>
             <p>I grew up in West Texas, spent 8 years living and working in China, another 8 years in Washington, DC, and recently moved back home to Texas.  Many ups and downs along the way.</p>
             <p>I now live outside Austin, TX with my wife and son (coming soon).</p>
           </div>
