improved quality of grand teton image

--- a/bio.html
+++ b/bio.html
@@ -43,18 +43,21 @@
           And treat those two impostors just the same."</blockquote>
       </div>
 
-      <div class="container-bio">
-        <div class="row">
-          <div class="col-5 text" id="bio-text">
-            <h2>Biography</h2>
-            <p>Explorer, learner, and builder.</p>
-            <p>I grew up in West Texas, spent 8 years living and working in China, another 8 years in Washington, DC, and recently moved back home to Texas.  Many ups and downs along the way.</p>
-            <p>I now live outside Austin, TX with my wife and son (coming soon).</p>
-          </div>
-          <div class="col-7 image" id="bio-image">
-            <img src="img/profile-pic-silhouette.png" height="300px" alt="profile-pic">
+      <div class="overlay-content">
+        <div class="overlay-text container-bio">
+          <div class="row">
+            <div class="col-5 text" id="bio-text">
+              <h2>Biography</h2>
+              <p>Explorer, learner, and builder.</p>
+              <p>I grew up in West Texas, spent 8 years living and working in China, another 8 years in Washington, DC, and recently moved back home to Texas.  Many ups and downs along the way.</p>
+              <p>I now live outside Austin, TX with my wife and son (coming soon).</p>
+            </div>
+            <div class="col-7 image" id="bio-image">
+              <img src="img/profile-pic-silhouette.png" height="300px" alt="profile-pic">
+            </div>
           </div>
         </div>
+        <div class="parallax grand-teton-img"></div>
       </div>
 
     </div>
